	+ new filter option "Relaxed domain". When activated and entered sub2.sub1.domain.com as filter it will match cookies with domains: sub2.sub1.domain.com, .sub1.domain.com and .domain.com (note: starts with a dot, which means any sub-domains), but will not match sub3.sub1.domain.com
	+ custom default export/backup filename can now contain # sign which will be replace with current date
	+ ability show raw domain in the tree (.domain.com instead of domain.com)
	+ experimental support for local storage (aka HTML5 cookies) (FF20+). Note, auto refresh when cookies changed doesn't work on HTML5 cookies!
	+ stretchable multi-line content row in main window
	+ multi-line content value edit, allowing entering new lines
	+ expand/compact buttons for content in edit cookie window, which will attempt make text easier to read by adding new lines to it (first it tries use JSON.parse(), if failed, replaces all %0A, %0D and %09 with \n, \r and \t, which creates new lines and tab characters). Note, it will automatically "compact" the value on save, regardless if it was previously expanded or not.
	+ checkbox to enable/disable word wrap in edit -> content
	+ scrollbars to content row view when word wrap is disabled (via right click on content row)
	+ debug information sent to error console (controlled by hidden setting extensions.cookiesmanagerplus.debug)
	+ delete expired cookies via menu or automatically when window opened or cookies list reloaded (issue #32)
	+ links to support website/email at help menu
	+ CM+ window can now be minimized
	+ drag'n drop multiple backup cookies files into CM+ window will restore cookies from those files
	* data in backup files is now sorted
	* leaving blank password field during backup process will save backup unencrypted (previously blank password wasn't accepted at all)
	* canceled backup password will cancel backup process all together
	* optimized upgrade script it now runs only once per session